--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  mobx:
-  flutter_mobx:
+  mobx: ^2.0.4
+  flutter_mobx: ^2.0.2
   get_it:
 
 dev_dependencies:
